--- a/.github/workflows/front-action.yml
+++ b/.github/workflows/front-action.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "main" ]
 jobs:
   front-job:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: SSH
         uses: appleboy/ssh-action@master
