--- a/.github/workflows/back-workflow.yml
+++ b/.github/workflows/back-workflow.yml
@@ -20,6 +20,9 @@ jobs:
             echo "SSH 접속"
             cd 2024-aws-kostagram/back
 
+            # 디렉토리 생성 (경로가 존재하지 않으면 생성)
+            mkdir -p src/main/resources
+            
             # 환경 설정 파일 생성
             echo "환경 설정 파일 생성"
             cat <<EOF > src/main/resources/application.yml
