--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -1,10 +1,33 @@
+# HTTP를 HTTPS로 리디렉션하는 서버 블록
 server {
     listen 80;
-    server_name localhost;
+    server_name inkyuinst.store www.inkyuinst.store;
 
+    # 모든 HTTP 요청을 HTTPS로 리디렉션
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS 설정 서버 블록
+server {
+    listen 443 ssl;
+    server_name inkyuinst.store www.inkyuinst.store;
+
+    # SSL 인증서 경로 설정
+    ssl_certificate /etc/letsencrypt/live/inkyuinst.store/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/inkyuinst.store/privkey.pem;
+
+    # SSL 설정 (필수 사항)
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # 정적 파일의 기본 경로 (React 빌드 결과물)
     root /usr/share/nginx/html;
     index index.html;
 
+    # React 라우팅 처리를 위한 설정
     location / {
         try_files $uri $uri/ /index.html;
     }
