--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -9,4 +9,7 @@ services:
       - "443:443"  # HTTPS 포트 매핑 추가
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Nginx 설정 파일
-      - /etc/letsencrypt:/etc/letsencrypt  # 인증서 경로를 컨테이너에 마운트
+      - /etc/letsencrypt/live/inkyuinst.store/fullchain.pem:/etc/ssl/certs/fullchain.pem  # 인증서 파일 마운트
+      - /etc/letsencrypt/live/inkyuinst.store/privkey.pem:/etc/ssl/private/privkey.pem  # 인증서 파일 마운트
+    networks:
+      - kosta-net
