--- a/front/docker-compose.yml
+++ b/front/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Nginx 설정 파일
-      - /etc/letsencrypt/live/inkyuinst.store/fullchain.pem:/etc/ssl/certs/fullchain.pem  # 인증서 파일 마운트
-      - /etc/letsencrypt/live/inkyuinst.store/privkey.pem:/etc/ssl/private/privkey.pem  # 인증서 파일 마운트
+      - /etc/letsencrypt/archive/inkyuinst.store/fullchain1.pem:/etc/ssl/certs/fullchain.pem:ro
+      - /etc/letsencrypt/archive/inkyuinst.store/privkey1.pem:/etc/ssl/private/privkey.pem:ro
