--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -15,9 +15,9 @@ server {
     server_name inkyuinst.store www.inkyuinst.store;
 
     # SSL 인증서 경로 설정
-    ssl_certificate /etc/letsencrypt/live/inkyuinst.store/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/inkyuinst.store/privkey.pem;
-
+    ssl_certificate /etc/ssl/certs/fullchain.pem;
+    ssl_certificate_key /etc/ssl/private/privkey.pem;
+    
     # SSL 설정 (필수 사항)
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
