--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -27,6 +27,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    location /api/ {
+        # 백엔드 서비스의 URL을 프록시
+        proxy_pass http://backend-container:8080;  # 백엔드 컨테이너의 HTTP URL
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
     # React 라우팅 처리를 위한 설정
     location / {
         try_files $uri $uri/ /index.html;
