--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -29,7 +29,7 @@ server {
 
     location /api/ {
         # 백엔드 서비스의 URL을 프록시
-        proxy_pass http://backend-container:8080;  # 백엔드 컨테이너의 HTTP URL
+        proxy_pass http://3.35.135.49:8080;  # 백엔드 컨테이너의 HTTP URL
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
