--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -34,6 +34,10 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # 추가: 요청 크기 제한 설정 (서버 블록과 동일하게 적용)
+        client_max_body_size 100M;  # 최대 요청 크기를 100MB로 설정
+    }
     }
     
     # React 라우팅 처리를 위한 설정
