--- a/.github/workflows/back-workflow.yml
+++ b/.github/workflows/back-workflow.yml
@@ -43,6 +43,10 @@ jobs:
                 password: 1313
               upload:
                 location: /home/image
+              servlet:
+                multipart:
+                  max-file-size: 100MB  # 업로드할 수 있는 단일 파일의 최대 크기
+                  max-request-size: 100MB  # 전체 요청의 최대 크기 (여러 파일 포함 가능)
             jwt:
               issuer: kosta-inkyu
               secret_key: ${{ secrets.JWT_SECRET_KEY }}
